--- a/src/components/main/style.css
+++ b/src/components/main/style.css
@@ -57,3 +57,10 @@
 	from { transform: rotate(0deg); }
 	to { transform: rotate(360deg); }
 }
+.list li {
+	display: inline;
+	margin-right: 5px;
+	padding: 3px;
+	border: 2px solid #fff;
+	background-color: orange;
+}
