--- a/src/index.css
+++ b/src/index.css
@@ -48,6 +48,11 @@ button.reject:focus {
 	outline: 0;
 }
 
+a {
+	color: inherit;
+	text-decoration: none;
+}
+
 .container {
 	justify-content: space-between;
 	align-items: center;
@@ -98,7 +103,7 @@ button.reject:focus {
 	flex-direction: row;
 	justify-content: center;
 	align-items: baseline;
-	height: 40px; width: 100%;
+	min-height: 40px; width: 100%;
 	background: #383637; color: #fff;
 	font-size: 18px;
 	z-index: 1;
